# LoRaProject

./: CMakeLists.txt  Makefile  imgMaker.py  read_bin_bByb.py  snr.cpp
NodeReceiver/: boot.py  main.py  pymakr.conf
node-sender/: boot.py  main.py  pymakr.conf
nodea/: main.py
nodeb/: main.py
simulacoes/: simulacoes
simulacoes/(1)/: data.txt
simulacoes/(2)/: data.txt
simulacoes/(3)/: data.txt
simulacoes/(4)/: data.txt
simulacoes/(5)/: data.txt
simulacoes/(6)/: data.txt
simulacoes/300m/: data_16-125.txt  data_20-125.txt  lost_packets_16-125.txt  lost_packets_20-500.txt
simulacoes/300m/(4)/: data.txt
simulacoes/300m/(8)/: data.txt
simulacoes/80m/(2)/: data.txt
simulacoes/80m/(3)/: data.txt
simulacoes/80m/(4)/: data.txt
simulacoes/80m/(8)/: data.txt
simulacoes/80mv1/(10)/: data_20-125.txt
simulacoes/80mv1/(3)/: data_12-500.txt
simulacoes/80mv1/(4)/: data_16-500.txt  lost_packets_16-500.txt
simulacoes/80mv1/(5)/: data_20-500.txt  lost_packets_20-500.txt
simulacoes/80mv1/(6)/: data_4-125.txt  lost_packets_4-125.txt
simulacoes/80mv1/(7)/: lost_packets_8-125.txt
simulacoes/80mv1/(8)/: data_12-125.txt  lost_packets_12-125.txt
simulacoes/80mv1/(9)/: data_16-125.txt
simulacoes/lado a lado/: data_5-125.txt
simulacoes/lado a lado/(1)/: data_4-500.txt
simulacoes/lado a lado/(10)/: data_20-125.txt
simulacoes/lado a lado/(2)/: data_8-500.txt
simulacoes/lado a lado/(3)/: data_12-500.txt
simulacoes/lado a lado/(4)/: data_16-500.txt
simulacoes/lado a lado/(5)/: data_20-500.txt
snr_bin/: snr
(+14 files in other folders)
